<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/app_main"
    android:orientation="vertical" >

    <!-- 标题栏 -->
    <RelativeLayout style="@style/app_title_main" >

        <TextView
            style="@style/app_title_wrap"
            android:layout_centerInParent="true"
            android:text="@string/setup_title" />

    </RelativeLayout>
    
     <LinearLayout
            style="@style/app_corner_wrap"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginTop="20dip" >
            
            <Button
                style="@style/app_row_with_arrow"
                android:onClick="handleUpdateSetup"
                android:text="@string/setup_update_time_setup" />

            <include layout="@drawable/line_split" />
            
             <Button
                style="@style/app_row_with_arrow"
                android:onClick="handleAbout"
                android:text="@string/setup_about_us" />

            <include layout="@drawable/line_split" />
            
            
            <Button
                style="@style/app_row_with_arrow"
                android:onClick="handleNewProducts"
                android:text="@string/setup_new_products" />

            <include layout="@drawable/line_split" />
            

            <Button
                style="@style/app_row_with_arrow"
                android:onClick="handleCheckUpdate"
                android:text="@string/setup_version_update" />

            <include layout="@drawable/line_split" />


        </LinearLayout>
        

   
    

</LinearLayout>