<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:background="@color/bg_gray_light">


	<!-- 标题栏 -->
	<RelativeLayout style="@style/app_title_main">
		
		<!-- 返回按钮 -->
		<Button style="@style/app_title_back" android:onClick="handleBack" />


		<!-- 标题 -->
		<TextView android:id="@+id/more_about_title" android:text="@string/setup_user_manage_bind_mail" style="@style/app_title_wrap"
			android:layout_centerInParent="true" />

	</RelativeLayout>

	<include layout="@layout/title_line_bottom" />

	<!-- 主体部分 -->
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:paddingTop="20dip"
		android:paddingBottom="30dip">
		<LinearLayout style="@style/app_corner_wrap" android:background="@null" android:layout_gravity="center"
			android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
	

			<TextView  android:layout_width="fill_parent"  android:layout_height="wrap_content" android:paddingBottom="10dip"
		        android:textSize="18dip" android:text="@string/usermanage_bind_mail_note" 
		         />
			
			<EditText android:id="@+id/usermanage_bind_mail_et"  style="@style/login_username_style" android:layout_marginBottom="5dip" />
		   
			<!-- 提交按钮 -->
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:gravity="center" android:layout_marginTop="10dip"
				android:layout_marginLeft="20dip" android:layout_marginRight="20dip">

				<Button
				    style="@style/app_btn_submit_fill"
				    android:layout_marginLeft="20dip"
				    android:layout_marginRight="20dip"
				    android:onClick="handleSubmit"
				    android:paddingLeft="20dip"
				    android:paddingRight="20dip"
				    android:text="@string/app_btn_label_ok" />

			</LinearLayout>
			

		</LinearLayout>
	</ScrollView>


</LinearLayout>
